# sog-character-editor

./: Cargo.toml  README.md
.github/workflows/: rust.yml
editor_ui/: Cargo.toml
editor_ui/src/: main.rs
savegame_lib/: Cargo.toml
savegame_lib/src/: csharp_string.rs  lib.rs  outfit_color.rs  player.rs  quickslot.rs
src/: csharp_string.rs  main.rs  player.rs  quickslot.rs
