[package]
name = "sog-character-editor"
version = "0.1.0"
license = "MIT OR Apache-2.0 OR copyleft-next-0.3.1 OR CC-BY-4.0"
edition = "2021"
rust-version = "1.72"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.27.1", features = [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"