[package]
name = "editor_ui"
version = "1.0.0"
license = "MIT OR Apache-2.0 OR copyleft-next-0.3.1 OR CC-BY-4.0"
edition = "2021"
rust-version = "1.72"


[build-dependencies]
winres = "0.1"


[dependencies]
savegame_lib = { path = "../savegame_lib/" }

eframe = { version = "0.27.2", features = [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }

env_logger = { version = "0.11.3", default-features = false, features = [
    "auto-color",
    "humantime",
] }
log = "0.4.21"
rfd = "0.14.1"