[package]
name = "savegame_lib"
version = "0.1.0"
license = "MIT OR Apache-2.0 OR copyleft-next-0.3.1 OR CC-BY-4.0"
edition = "2021"
rust-version = "1.72"

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_repr = "*"
bincode = "*"
byteorder = "*"
strum = "0.26.2"
strum_macros = "0.26.2"

[lib]
path = "src/lib.rs"